// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnalyserJsonTransformer susceptibilityTransformer when valid and in Metadata format should return data transformed as expected 1`] = `
Object {
  "evidence": Object {},
  "inconclusive": Array [
    "pyrazinamide",
    "rifabutin",
    "ethionamideProthionamide",
    "rerizidone",
    "thioacetazone",
    "delamanid",
  ],
  "inducible": Array [],
  "notTested": Array [
    "isoniazid",
    "pas",
  ],
  "resistant": Array [
    "ethambutol",
    "ofloxacin",
    "levofloxacin",
    "amikacin",
    "gentamicin",
    "capreomycin",
    "linezolid",
    "amoxicilinClavulanate",
    "imipenemImipenemcilastatin",
    "clarythromycin",
    "prothionamide",
    "pretothionamide",
  ],
  "susceptibility": Object {
    "amikacin": Object {
      "inconclusive": false,
      "inducible": false,
      "method": "MGIT",
      "notTested": false,
      "resistant": true,
      "susceptible": false,
      "type": "RESISTANT",
    },
    "amoxicilinClavulanate": Object {
      "inconclusive": false,
      "inducible": false,
      "method": undefined,
      "notTested": false,
      "resistant": true,
      "susceptible": false,
      "type": "RESISTANT",
    },
    "bedaquiline": Object {
      "inconclusive": false,
      "inducible": false,
      "method": undefined,
      "notTested": false,
      "resistant": false,
      "susceptible": true,
      "type": "SUSCEPTIBLE",
    },
    "capreomycin": Object {
      "inconclusive": false,
      "inducible": false,
      "method": "MGIT",
      "notTested": false,
      "resistant": true,
      "susceptible": false,
      "type": "RESISTANT",
    },
    "ciprofloxacin": Object {
      "inconclusive": false,
      "inducible": false,
      "method": "Not known",
      "notTested": false,
      "resistant": false,
      "susceptible": false,
      "type": "UNKNOWN",
    },
    "clarythromycin": Object {
      "inconclusive": false,
      "inducible": false,
      "method": undefined,
      "notTested": false,
      "resistant": true,
      "susceptible": false,
      "type": "RESISTANT",
    },
    "clofazimine": Object {
      "inconclusive": false,
      "inducible": false,
      "method": "MODS",
      "notTested": false,
      "resistant": false,
      "susceptible": true,
      "type": "SUSCEPTIBLE",
    },
    "delamanid": Object {
      "inconclusive": true,
      "inducible": false,
      "method": undefined,
      "notTested": false,
      "resistant": false,
      "susceptible": false,
      "type": "INCONCLUSIVE",
    },
    "ethambutol": Object {
      "inconclusive": false,
      "inducible": false,
      "method": "Microtitre plate",
      "notTested": false,
      "resistant": true,
      "susceptible": false,
      "type": "RESISTANT",
    },
    "ethionamideProthionamide": Object {
      "inconclusive": true,
      "inducible": false,
      "method": undefined,
      "notTested": false,
      "resistant": false,
      "susceptible": false,
      "type": "INCONCLUSIVE",
    },
    "gatifloxacin": Object {
      "inconclusive": false,
      "inducible": false,
      "method": "Microtitre plate",
      "notTested": false,
      "resistant": false,
      "susceptible": true,
      "type": "SUSCEPTIBLE",
    },
    "gentamicin": Object {
      "inconclusive": false,
      "inducible": false,
      "method": "MGIT",
      "notTested": false,
      "resistant": true,
      "susceptible": false,
      "type": "RESISTANT",
    },
    "highDoseIsoniazid": Object {
      "inconclusive": false,
      "inducible": false,
      "method": undefined,
      "notTested": false,
      "resistant": false,
      "susceptible": true,
      "type": "SUSCEPTIBLE",
    },
    "imipenemImipenemcilastatin": Object {
      "inconclusive": false,
      "inducible": false,
      "method": undefined,
      "notTested": false,
      "resistant": true,
      "susceptible": false,
      "type": "RESISTANT",
    },
    "isoniazid": Object {
      "inconclusive": false,
      "inducible": false,
      "method": "Other",
      "notTested": true,
      "resistant": false,
      "susceptible": false,
      "type": "NOT_TESTED",
    },
    "kanamycin": Object {
      "inconclusive": false,
      "inducible": false,
      "method": undefined,
      "notTested": false,
      "resistant": false,
      "susceptible": true,
      "type": "SUSCEPTIBLE",
    },
    "levofloxacin": Object {
      "inconclusive": false,
      "inducible": false,
      "method": "Microtitre plate",
      "notTested": false,
      "resistant": true,
      "susceptible": false,
      "type": "RESISTANT",
    },
    "linezolid": Object {
      "inconclusive": false,
      "inducible": false,
      "method": undefined,
      "notTested": false,
      "resistant": true,
      "susceptible": false,
      "type": "RESISTANT",
    },
    "meropenem": Object {
      "inconclusive": false,
      "inducible": false,
      "method": undefined,
      "notTested": false,
      "resistant": false,
      "susceptible": true,
      "type": "SUSCEPTIBLE",
    },
    "ofloxacin": Object {
      "inconclusive": false,
      "inducible": false,
      "method": "Other",
      "notTested": false,
      "resistant": true,
      "susceptible": false,
      "type": "RESISTANT",
    },
    "pas": Object {
      "inconclusive": false,
      "inducible": false,
      "method": "Microtitre plate",
      "notTested": true,
      "resistant": false,
      "susceptible": false,
      "type": "NOT_TESTED",
    },
    "pretomanid": Object {
      "inconclusive": false,
      "inducible": false,
      "method": undefined,
      "notTested": false,
      "resistant": false,
      "susceptible": true,
      "type": "SUSCEPTIBLE",
    },
    "pretothionamide": Object {
      "inconclusive": false,
      "inducible": false,
      "method": undefined,
      "notTested": false,
      "resistant": true,
      "susceptible": false,
      "type": "RESISTANT",
    },
    "prothionamide": Object {
      "inconclusive": false,
      "inducible": false,
      "method": undefined,
      "notTested": false,
      "resistant": true,
      "susceptible": false,
      "type": "RESISTANT",
    },
    "pyrazinamide": Object {
      "inconclusive": true,
      "inducible": false,
      "method": "Microtitre plate",
      "notTested": false,
      "resistant": false,
      "susceptible": false,
      "type": "INCONCLUSIVE",
    },
    "rerizidone": Object {
      "inconclusive": true,
      "inducible": false,
      "method": undefined,
      "notTested": false,
      "resistant": false,
      "susceptible": false,
      "type": "INCONCLUSIVE",
    },
    "rifabutin": Object {
      "inconclusive": true,
      "inducible": false,
      "method": "MGIT",
      "notTested": false,
      "resistant": false,
      "susceptible": false,
      "type": "INCONCLUSIVE",
    },
    "rifampicin": Object {
      "inconclusive": false,
      "inducible": false,
      "method": "Other",
      "notTested": false,
      "resistant": false,
      "susceptible": true,
      "type": "SUSCEPTIBLE",
    },
    "streptomycin": Object {
      "inconclusive": false,
      "inducible": false,
      "method": "Microtitre plate",
      "notTested": false,
      "resistant": false,
      "susceptible": true,
      "type": "SUSCEPTIBLE",
    },
    "thioacetazone": Object {
      "inconclusive": true,
      "inducible": false,
      "method": "Microtitre plate",
      "notTested": false,
      "resistant": false,
      "susceptible": false,
      "type": "INCONCLUSIVE",
    },
  },
  "susceptible": Array [
    "rifampicin",
    "gatifloxacin",
    "kanamycin",
    "streptomycin",
    "clofazimine",
    "meropenem",
    "highDoseIsoniazid",
    "bedaquiline",
    "pretomanid",
  ],
}
`;

exports[`AnalyserJsonTransformer susceptibilityTransformer when valid and in Predicator format should return data transformed as expected 1`] = `
Object {
  "evidence": Object {
    "Isoniazid": Array [
      Array [
        "Resistance mutation found: S315G in gene katG",
        "Depth 82 on the resistant allele",
        "Depth 1 on the susceptible allele",
      ],
    ],
  },
  "inconclusive": Array [],
  "inducible": Array [],
  "notTested": Array [],
  "resistant": Array [
    "Isoniazid",
  ],
  "susceptibility": Object {
    "Amikacin": Object {
      "inconclusive": false,
      "inducible": false,
      "notTested": false,
      "resistant": false,
      "susceptible": true,
      "type": "SUSCEPTIBLE",
    },
    "Capreomycin": Object {
      "inconclusive": false,
      "inducible": false,
      "notTested": false,
      "resistant": false,
      "susceptible": true,
      "type": "SUSCEPTIBLE",
    },
    "Ciprofloxacin": Object {
      "inconclusive": false,
      "inducible": false,
      "notTested": false,
      "resistant": false,
      "susceptible": true,
      "type": "SUSCEPTIBLE",
    },
    "Ethambutol": Object {
      "inconclusive": false,
      "inducible": false,
      "notTested": false,
      "resistant": false,
      "susceptible": true,
      "type": "SUSCEPTIBLE",
    },
    "Isoniazid": Object {
      "inconclusive": false,
      "inducible": false,
      "mutation": "katG (S315G)",
      "notTested": false,
      "resistant": true,
      "susceptible": false,
      "type": "RESISTANT",
    },
    "Kanamycin": Object {
      "inconclusive": false,
      "inducible": false,
      "notTested": false,
      "resistant": false,
      "susceptible": true,
      "type": "SUSCEPTIBLE",
    },
    "Moxifloxacin": Object {
      "inconclusive": false,
      "inducible": false,
      "notTested": false,
      "resistant": false,
      "susceptible": true,
      "type": "SUSCEPTIBLE",
    },
    "Ofloxacin": Object {
      "inconclusive": false,
      "inducible": false,
      "notTested": false,
      "resistant": false,
      "susceptible": true,
      "type": "SUSCEPTIBLE",
    },
    "Pyrazinamide": Object {
      "inconclusive": false,
      "inducible": false,
      "notTested": false,
      "resistant": false,
      "susceptible": true,
      "type": "SUSCEPTIBLE",
    },
    "Rifampicin": Object {
      "inconclusive": false,
      "inducible": false,
      "notTested": false,
      "resistant": false,
      "susceptible": true,
      "type": "SUSCEPTIBLE",
    },
    "Streptomycin": Object {
      "inconclusive": false,
      "inducible": false,
      "notTested": false,
      "resistant": false,
      "susceptible": true,
      "type": "SUSCEPTIBLE",
    },
  },
  "susceptible": Array [
    "Ofloxacin",
    "Moxifloxacin",
    "Kanamycin",
    "Ethambutol",
    "Streptomycin",
    "Ciprofloxacin",
    "Pyrazinamide",
    "Rifampicin",
    "Amikacin",
    "Capreomycin",
  ],
}
`;

exports[`AnalyserJsonTransformer susceptibilityTransformer when valid and in Predicator format should return data transformed as expected 2`] = `
Object {
  "evidence": Object {
    "Isoniazid": Array [
      Array [
        "Resistance mutation found: S315G in gene katG",
        "Depth 43 on the resistant allele",
        "Depth 0 on the susceptible allele",
      ],
    ],
    "Rifampicin": Array [
      Array [
        "Resistance mutation found: S450L in gene rpoB",
        "Depth 51 on the resistant allele",
        "Depth 0 on the susceptible allele",
      ],
    ],
  },
  "inconclusive": Array [],
  "inducible": Array [],
  "notTested": Array [],
  "resistant": Array [
    "Isoniazid",
    "Rifampicin",
  ],
  "susceptibility": Object {
    "Amikacin": Object {
      "inconclusive": false,
      "inducible": false,
      "notTested": false,
      "resistant": false,
      "susceptible": true,
      "type": "SUSCEPTIBLE",
    },
    "Capreomycin": Object {
      "inconclusive": false,
      "inducible": false,
      "notTested": false,
      "resistant": false,
      "susceptible": true,
      "type": "SUSCEPTIBLE",
    },
    "Ciprofloxacin": Object {
      "inconclusive": false,
      "inducible": false,
      "notTested": false,
      "resistant": false,
      "susceptible": true,
      "type": "SUSCEPTIBLE",
    },
    "Ethambutol": Object {
      "inconclusive": false,
      "inducible": false,
      "notTested": false,
      "resistant": false,
      "susceptible": true,
      "type": "SUSCEPTIBLE",
    },
    "Isoniazid": Object {
      "inconclusive": false,
      "inducible": false,
      "mutation": "katG (S315G)",
      "notTested": false,
      "resistant": true,
      "susceptible": false,
      "type": "RESISTANT",
    },
    "Kanamycin": Object {
      "inconclusive": false,
      "inducible": false,
      "notTested": false,
      "resistant": false,
      "susceptible": true,
      "type": "SUSCEPTIBLE",
    },
    "Moxifloxacin": Object {
      "inconclusive": false,
      "inducible": false,
      "notTested": false,
      "resistant": false,
      "susceptible": true,
      "type": "SUSCEPTIBLE",
    },
    "Ofloxacin": Object {
      "inconclusive": false,
      "inducible": false,
      "notTested": false,
      "resistant": false,
      "susceptible": true,
      "type": "SUSCEPTIBLE",
    },
    "Pyrazinamide": Object {
      "inconclusive": false,
      "inducible": false,
      "notTested": false,
      "resistant": false,
      "susceptible": true,
      "type": "SUSCEPTIBLE",
    },
    "Rifampicin": Object {
      "inconclusive": false,
      "inducible": false,
      "mutation": "rpoB (S450L)",
      "notTested": false,
      "resistant": true,
      "susceptible": false,
      "type": "RESISTANT",
    },
    "Streptomycin": Object {
      "inconclusive": false,
      "inducible": false,
      "notTested": false,
      "resistant": false,
      "susceptible": true,
      "type": "SUSCEPTIBLE",
    },
  },
  "susceptible": Array [
    "Ofloxacin",
    "Moxifloxacin",
    "Kanamycin",
    "Ethambutol",
    "Streptomycin",
    "Ciprofloxacin",
    "Pyrazinamide",
    "Amikacin",
    "Capreomycin",
  ],
}
`;

exports[`AnalyserJsonTransformer susceptibilityTransformer when valid and in Predicator format should return data transformed as expected 3`] = `
Object {
  "evidence": Object {},
  "inconclusive": Array [],
  "inducible": Array [],
  "notTested": Array [],
  "resistant": Array [],
  "susceptibility": Object {
    "Amikacin": Object {
      "inconclusive": false,
      "inducible": false,
      "notTested": false,
      "resistant": false,
      "susceptible": true,
      "type": "SUSCEPTIBLE",
    },
    "Capreomycin": Object {
      "inconclusive": false,
      "inducible": false,
      "notTested": false,
      "resistant": false,
      "susceptible": true,
      "type": "SUSCEPTIBLE",
    },
    "Ciprofloxacin": Object {
      "inconclusive": false,
      "inducible": false,
      "notTested": false,
      "resistant": false,
      "susceptible": true,
      "type": "SUSCEPTIBLE",
    },
    "Ethambutol": Object {
      "inconclusive": false,
      "inducible": false,
      "notTested": false,
      "resistant": false,
      "susceptible": true,
      "type": "SUSCEPTIBLE",
    },
    "Isoniazid": Object {
      "inconclusive": false,
      "inducible": false,
      "notTested": false,
      "resistant": false,
      "susceptible": true,
      "type": "SUSCEPTIBLE",
    },
    "Kanamycin": Object {
      "inconclusive": false,
      "inducible": false,
      "notTested": false,
      "resistant": false,
      "susceptible": true,
      "type": "SUSCEPTIBLE",
    },
    "Moxifloxacin": Object {
      "inconclusive": false,
      "inducible": false,
      "notTested": false,
      "resistant": false,
      "susceptible": true,
      "type": "SUSCEPTIBLE",
    },
    "Ofloxacin": Object {
      "inconclusive": false,
      "inducible": false,
      "notTested": false,
      "resistant": false,
      "susceptible": true,
      "type": "SUSCEPTIBLE",
    },
    "Pyrazinamide": Object {
      "inconclusive": false,
      "inducible": false,
      "notTested": false,
      "resistant": false,
      "susceptible": true,
      "type": "SUSCEPTIBLE",
    },
    "Rifampicin": Object {
      "inconclusive": false,
      "inducible": false,
      "notTested": false,
      "resistant": false,
      "susceptible": true,
      "type": "SUSCEPTIBLE",
    },
    "Streptomycin": Object {
      "inconclusive": false,
      "inducible": false,
      "notTested": false,
      "resistant": false,
      "susceptible": true,
      "type": "SUSCEPTIBLE",
    },
  },
  "susceptible": Array [
    "Ofloxacin",
    "Moxifloxacin",
    "Isoniazid",
    "Kanamycin",
    "Ethambutol",
    "Streptomycin",
    "Ciprofloxacin",
    "Pyrazinamide",
    "Rifampicin",
    "Amikacin",
    "Capreomycin",
  ],
}
`;

exports[`AnalyserJsonTransformer susceptibilityTransformer when valid and in Predicator format should return data transformed as expected 4`] = `
Object {
  "evidence": Object {
    "Rifampicin": Array [
      Array [
        "Resistance mutation found: H445Y in gene rpoB",
        "Depth 28 on the resistant allele",
        "Depth 98 on the susceptible allele",
      ],
      Array [
        "Resistance mutation found: S450L in gene rpoB",
        "Depth 100 on the resistant allele",
        "Depth 40 on the susceptible allele",
      ],
    ],
  },
  "inconclusive": Array [],
  "inducible": Array [],
  "notTested": Array [],
  "resistant": Array [
    "Rifampicin",
  ],
  "susceptibility": Object {
    "Amikacin": Object {
      "inconclusive": false,
      "inducible": false,
      "notTested": false,
      "resistant": false,
      "susceptible": true,
      "type": "SUSCEPTIBLE",
    },
    "Capreomycin": Object {
      "inconclusive": false,
      "inducible": false,
      "notTested": false,
      "resistant": false,
      "susceptible": true,
      "type": "SUSCEPTIBLE",
    },
    "Ciprofloxacin": Object {
      "inconclusive": false,
      "inducible": false,
      "notTested": false,
      "resistant": false,
      "susceptible": true,
      "type": "SUSCEPTIBLE",
    },
    "Ethambutol": Object {
      "inconclusive": false,
      "inducible": false,
      "notTested": false,
      "resistant": false,
      "susceptible": true,
      "type": "SUSCEPTIBLE",
    },
    "Isoniazid": Object {
      "inconclusive": false,
      "inducible": false,
      "notTested": false,
      "resistant": false,
      "susceptible": true,
      "type": "SUSCEPTIBLE",
    },
    "Kanamycin": Object {
      "inconclusive": false,
      "inducible": false,
      "notTested": false,
      "resistant": false,
      "susceptible": true,
      "type": "SUSCEPTIBLE",
    },
    "Moxifloxacin": Object {
      "inconclusive": false,
      "inducible": false,
      "notTested": false,
      "resistant": false,
      "susceptible": true,
      "type": "SUSCEPTIBLE",
    },
    "Ofloxacin": Object {
      "inconclusive": false,
      "inducible": false,
      "notTested": false,
      "resistant": false,
      "susceptible": true,
      "type": "SUSCEPTIBLE",
    },
    "Pyrazinamide": Object {
      "inconclusive": false,
      "inducible": false,
      "notTested": false,
      "resistant": false,
      "susceptible": true,
      "type": "SUSCEPTIBLE",
    },
    "Rifampicin": Object {
      "inconclusive": false,
      "inducible": false,
      "mutation": "rpoB (S450L)",
      "notTested": false,
      "resistant": true,
      "susceptible": false,
      "type": "RESISTANT",
    },
    "Streptomycin": Object {
      "inconclusive": false,
      "inducible": false,
      "notTested": false,
      "resistant": false,
      "susceptible": true,
      "type": "SUSCEPTIBLE",
    },
  },
  "susceptible": Array [
    "Ofloxacin",
    "Moxifloxacin",
    "Isoniazid",
    "Kanamycin",
    "Ethambutol",
    "Streptomycin",
    "Ciprofloxacin",
    "Pyrazinamide",
    "Amikacin",
    "Capreomycin",
  ],
}
`;

exports[`AnalyserJsonTransformer susceptibilityTransformer when valid and in Predicator format should return data transformed as expected 5`] = `
Object {
  "evidence": Object {
    "Amikacin": Array [
      Array [
        "Resistance mutation found: A1401X in gene rrs",
        "Depth 52 on the resistant allele",
        "Depth 0 on the susceptible allele",
      ],
    ],
    "Capreomycin": Array [
      Array [
        "Resistance mutation found: A1401X in gene rrs",
        "Depth 52 on the resistant allele",
        "Depth 0 on the susceptible allele",
      ],
    ],
    "Ciprofloxacin": Array [
      Array [
        "Resistance mutation found: A90V in gene gyrA",
        "Depth 13 on the resistant allele",
        "Depth 22 on the susceptible allele",
      ],
      Array [
        "Resistance mutation found: D94G in gene gyrA",
        "Depth 18 on the resistant allele",
        "Depth 11 on the susceptible allele",
      ],
    ],
    "Ethambutol": Array [
      Array [
        "Resistance mutation found: M306V in gene embB",
        "Depth 45 on the resistant allele",
        "Depth 0 on the susceptible allele",
      ],
    ],
    "Isoniazid": Array [
      Array [
        "Resistance mutation found: S315G in gene katG",
        "Depth 30 on the resistant allele",
        "Depth 0 on the susceptible allele",
      ],
    ],
    "Kanamycin": Array [
      Array [
        "Resistance mutation found: A1401X in gene rrs",
        "Depth 52 on the resistant allele",
        "Depth 0 on the susceptible allele",
      ],
    ],
    "Moxifloxacin": Array [
      Array [
        "Resistance mutation found: A90V in gene gyrA",
        "Depth 13 on the resistant allele",
        "Depth 22 on the susceptible allele",
      ],
      Array [
        "Resistance mutation found: D94G in gene gyrA",
        "Depth 18 on the resistant allele",
        "Depth 11 on the susceptible allele",
      ],
    ],
    "Ofloxacin": Array [
      Array [
        "Resistance mutation found: A90V in gene gyrA",
        "Depth 13 on the resistant allele",
        "Depth 22 on the susceptible allele",
      ],
      Array [
        "Resistance mutation found: D94G in gene gyrA",
        "Depth 18 on the resistant allele",
        "Depth 11 on the susceptible allele",
      ],
    ],
    "Pyrazinamide": Array [
      Array [
        "Resistance mutation found: H137R in gene pncA",
        "Depth 7 on the resistant allele",
        "Depth 22 on the susceptible allele",
      ],
    ],
    "Rifampicin": Array [
      Array [
        "Resistance mutation found: S450L in gene rpoB",
        "Depth 44 on the resistant allele",
        "Depth 0 on the susceptible allele",
      ],
    ],
    "Streptomycin": Array [
      Array [
        "Resistance mutation found: K43R in gene rpsL",
        "Depth 56 on the resistant allele",
        "Depth 0 on the susceptible allele",
      ],
    ],
  },
  "inconclusive": Array [],
  "inducible": Array [],
  "notTested": Array [],
  "resistant": Array [
    "Ofloxacin",
    "Moxifloxacin",
    "Isoniazid",
    "Kanamycin",
    "Ethambutol",
    "Streptomycin",
    "Ciprofloxacin",
    "Pyrazinamide",
    "Rifampicin",
    "Amikacin",
    "Capreomycin",
  ],
  "susceptibility": Object {
    "Amikacin": Object {
      "inconclusive": false,
      "inducible": false,
      "mutation": "rrs (A1401X)",
      "notTested": false,
      "resistant": true,
      "susceptible": false,
      "type": "RESISTANT",
    },
    "Capreomycin": Object {
      "inconclusive": false,
      "inducible": false,
      "mutation": "rrs (A1401X)",
      "notTested": false,
      "resistant": true,
      "susceptible": false,
      "type": "RESISTANT",
    },
    "Ciprofloxacin": Object {
      "inconclusive": false,
      "inducible": false,
      "mutation": "gyrA (D94G)",
      "notTested": false,
      "resistant": true,
      "susceptible": false,
      "type": "RESISTANT",
    },
    "Ethambutol": Object {
      "inconclusive": false,
      "inducible": false,
      "mutation": "embB (M306V)",
      "notTested": false,
      "resistant": true,
      "susceptible": false,
      "type": "RESISTANT",
    },
    "Isoniazid": Object {
      "inconclusive": false,
      "inducible": false,
      "mutation": "katG (S315G)",
      "notTested": false,
      "resistant": true,
      "susceptible": false,
      "type": "RESISTANT",
    },
    "Kanamycin": Object {
      "inconclusive": false,
      "inducible": false,
      "mutation": "rrs (A1401X)",
      "notTested": false,
      "resistant": true,
      "susceptible": false,
      "type": "RESISTANT",
    },
    "Moxifloxacin": Object {
      "inconclusive": false,
      "inducible": false,
      "mutation": "gyrA (D94G)",
      "notTested": false,
      "resistant": true,
      "susceptible": false,
      "type": "RESISTANT",
    },
    "Ofloxacin": Object {
      "inconclusive": false,
      "inducible": false,
      "mutation": "gyrA (D94G)",
      "notTested": false,
      "resistant": true,
      "susceptible": false,
      "type": "RESISTANT",
    },
    "Pyrazinamide": Object {
      "inconclusive": false,
      "inducible": false,
      "mutation": "pncA (H137R)",
      "notTested": false,
      "resistant": true,
      "susceptible": false,
      "type": "RESISTANT",
    },
    "Rifampicin": Object {
      "inconclusive": false,
      "inducible": false,
      "mutation": "rpoB (S450L)",
      "notTested": false,
      "resistant": true,
      "susceptible": false,
      "type": "RESISTANT",
    },
    "Streptomycin": Object {
      "inconclusive": false,
      "inducible": false,
      "mutation": "rpsL (K43R)",
      "notTested": false,
      "resistant": true,
      "susceptible": false,
      "type": "RESISTANT",
    },
  },
  "susceptible": Array [],
}
`;

exports[`AnalyserJsonTransformer when valid should transform as expected 1`] = `
Object {
  "drugsResistance": Object {
    "mdr": false,
    "xdr": false,
  },
  "evidence": Object {
    "Isoniazid": Array [
      Array [
        "Resistance mutation found: S315G in gene katG",
        "Depth 82 on the resistant allele",
        "Depth 1 on the susceptible allele",
      ],
    ],
  },
  "hasResistance": true,
  "hasSpecies": true,
  "inconclusive": Array [],
  "inducible": Array [],
  "lineage": Array [
    "lineage4.10",
  ],
  "lineageString": "lineage4.10",
  "negative": Array [],
  "notTested": Array [],
  "positive": Array [],
  "resistant": Array [
    "Isoniazid",
  ],
  "species": Array [
    "Mycobacterium_tuberculosis",
  ],
  "speciesAndLineageString": "Mycobacterium tuberculosis (lineage4.10)",
  "speciesString": "Mycobacterium tuberculosis",
  "susceptibility": Object {
    "Amikacin": Object {
      "inconclusive": false,
      "inducible": false,
      "notTested": false,
      "resistant": false,
      "susceptible": true,
      "type": "SUSCEPTIBLE",
    },
    "Capreomycin": Object {
      "inconclusive": false,
      "inducible": false,
      "notTested": false,
      "resistant": false,
      "susceptible": true,
      "type": "SUSCEPTIBLE",
    },
    "Ciprofloxacin": Object {
      "inconclusive": false,
      "inducible": false,
      "notTested": false,
      "resistant": false,
      "susceptible": true,
      "type": "SUSCEPTIBLE",
    },
    "Ethambutol": Object {
      "inconclusive": false,
      "inducible": false,
      "notTested": false,
      "resistant": false,
      "susceptible": true,
      "type": "SUSCEPTIBLE",
    },
    "Isoniazid": Object {
      "inconclusive": false,
      "inducible": false,
      "mutation": "katG (S315G)",
      "notTested": false,
      "resistant": true,
      "susceptible": false,
      "type": "RESISTANT",
    },
    "Kanamycin": Object {
      "inconclusive": false,
      "inducible": false,
      "notTested": false,
      "resistant": false,
      "susceptible": true,
      "type": "SUSCEPTIBLE",
    },
    "Moxifloxacin": Object {
      "inconclusive": false,
      "inducible": false,
      "notTested": false,
      "resistant": false,
      "susceptible": true,
      "type": "SUSCEPTIBLE",
    },
    "Ofloxacin": Object {
      "inconclusive": false,
      "inducible": false,
      "notTested": false,
      "resistant": false,
      "susceptible": true,
      "type": "SUSCEPTIBLE",
    },
    "Pyrazinamide": Object {
      "inconclusive": false,
      "inducible": false,
      "notTested": false,
      "resistant": false,
      "susceptible": true,
      "type": "SUSCEPTIBLE",
    },
    "Rifampicin": Object {
      "inconclusive": false,
      "inducible": false,
      "notTested": false,
      "resistant": false,
      "susceptible": true,
      "type": "SUSCEPTIBLE",
    },
    "Streptomycin": Object {
      "inconclusive": false,
      "inducible": false,
      "notTested": false,
      "resistant": false,
      "susceptible": true,
      "type": "SUSCEPTIBLE",
    },
  },
  "susceptible": Array [
    "Ofloxacin",
    "Moxifloxacin",
    "Kanamycin",
    "Ethambutol",
    "Streptomycin",
    "Ciprofloxacin",
    "Pyrazinamide",
    "Rifampicin",
    "Amikacin",
    "Capreomycin",
  ],
}
`;

exports[`AnalyserJsonTransformer when valid should transform as expected 2`] = `
Object {
  "drugsResistance": Object {
    "mdr": true,
    "xdr": false,
  },
  "evidence": Object {
    "Isoniazid": Array [
      Array [
        "Resistance mutation found: S315G in gene katG",
        "Depth 43 on the resistant allele",
        "Depth 0 on the susceptible allele",
      ],
    ],
    "Rifampicin": Array [
      Array [
        "Resistance mutation found: S450L in gene rpoB",
        "Depth 51 on the resistant allele",
        "Depth 0 on the susceptible allele",
      ],
    ],
  },
  "hasResistance": true,
  "hasSpecies": true,
  "inconclusive": Array [],
  "inducible": Array [],
  "lineage": Array [
    "lineage4.6.2.2",
  ],
  "lineageString": "lineage4.6.2.2",
  "negative": Array [],
  "notTested": Array [],
  "positive": Array [],
  "resistant": Array [
    "Isoniazid",
    "Rifampicin",
  ],
  "species": Array [
    "Mycobacterium_tuberculosis",
  ],
  "speciesAndLineageString": "Mycobacterium tuberculosis (lineage4.6.2.2)",
  "speciesString": "Mycobacterium tuberculosis",
  "susceptibility": Object {
    "Amikacin": Object {
      "inconclusive": false,
      "inducible": false,
      "notTested": false,
      "resistant": false,
      "susceptible": true,
      "type": "SUSCEPTIBLE",
    },
    "Capreomycin": Object {
      "inconclusive": false,
      "inducible": false,
      "notTested": false,
      "resistant": false,
      "susceptible": true,
      "type": "SUSCEPTIBLE",
    },
    "Ciprofloxacin": Object {
      "inconclusive": false,
      "inducible": false,
      "notTested": false,
      "resistant": false,
      "susceptible": true,
      "type": "SUSCEPTIBLE",
    },
    "Ethambutol": Object {
      "inconclusive": false,
      "inducible": false,
      "notTested": false,
      "resistant": false,
      "susceptible": true,
      "type": "SUSCEPTIBLE",
    },
    "Isoniazid": Object {
      "inconclusive": false,
      "inducible": false,
      "mutation": "katG (S315G)",
      "notTested": false,
      "resistant": true,
      "susceptible": false,
      "type": "RESISTANT",
    },
    "Kanamycin": Object {
      "inconclusive": false,
      "inducible": false,
      "notTested": false,
      "resistant": false,
      "susceptible": true,
      "type": "SUSCEPTIBLE",
    },
    "Moxifloxacin": Object {
      "inconclusive": false,
      "inducible": false,
      "notTested": false,
      "resistant": false,
      "susceptible": true,
      "type": "SUSCEPTIBLE",
    },
    "Ofloxacin": Object {
      "inconclusive": false,
      "inducible": false,
      "notTested": false,
      "resistant": false,
      "susceptible": true,
      "type": "SUSCEPTIBLE",
    },
    "Pyrazinamide": Object {
      "inconclusive": false,
      "inducible": false,
      "notTested": false,
      "resistant": false,
      "susceptible": true,
      "type": "SUSCEPTIBLE",
    },
    "Rifampicin": Object {
      "inconclusive": false,
      "inducible": false,
      "mutation": "rpoB (S450L)",
      "notTested": false,
      "resistant": true,
      "susceptible": false,
      "type": "RESISTANT",
    },
    "Streptomycin": Object {
      "inconclusive": false,
      "inducible": false,
      "notTested": false,
      "resistant": false,
      "susceptible": true,
      "type": "SUSCEPTIBLE",
    },
  },
  "susceptible": Array [
    "Ofloxacin",
    "Moxifloxacin",
    "Kanamycin",
    "Ethambutol",
    "Streptomycin",
    "Ciprofloxacin",
    "Pyrazinamide",
    "Amikacin",
    "Capreomycin",
  ],
}
`;

exports[`AnalyserJsonTransformer when valid should transform as expected 3`] = `
Object {
  "hasResistance": false,
  "hasSpecies": true,
  "lineage": Array [
    "lineage4.10",
  ],
  "lineageString": "lineage4.10",
  "species": Array [
    "Mycobacterium_kansasii",
  ],
  "speciesAndLineageString": "Mycobacterium kansasii (lineage4.10)",
  "speciesString": "Mycobacterium kansasii",
}
`;

exports[`AnalyserJsonTransformer when valid should transform as expected 4`] = `
Object {
  "drugsResistance": Object {
    "mdr": false,
    "xdr": false,
  },
  "evidence": Object {
    "Rifampicin": Array [
      Array [
        "Resistance mutation found: H445Y in gene rpoB",
        "Depth 28 on the resistant allele",
        "Depth 98 on the susceptible allele",
      ],
      Array [
        "Resistance mutation found: S450L in gene rpoB",
        "Depth 100 on the resistant allele",
        "Depth 40 on the susceptible allele",
      ],
    ],
  },
  "hasResistance": true,
  "hasSpecies": true,
  "inconclusive": Array [],
  "inducible": Array [],
  "lineage": Array [
    "lineage4.10",
  ],
  "lineageString": "lineage4.10",
  "negative": Array [],
  "notTested": Array [],
  "positive": Array [],
  "resistant": Array [
    "Rifampicin",
  ],
  "species": Array [
    "Mycobacterium_tuberculosis",
  ],
  "speciesAndLineageString": "Mycobacterium tuberculosis (lineage4.10)",
  "speciesString": "Mycobacterium tuberculosis",
  "susceptibility": Object {
    "Amikacin": Object {
      "inconclusive": false,
      "inducible": false,
      "notTested": false,
      "resistant": false,
      "susceptible": true,
      "type": "SUSCEPTIBLE",
    },
    "Capreomycin": Object {
      "inconclusive": false,
      "inducible": false,
      "notTested": false,
      "resistant": false,
      "susceptible": true,
      "type": "SUSCEPTIBLE",
    },
    "Ciprofloxacin": Object {
      "inconclusive": false,
      "inducible": false,
      "notTested": false,
      "resistant": false,
      "susceptible": true,
      "type": "SUSCEPTIBLE",
    },
    "Ethambutol": Object {
      "inconclusive": false,
      "inducible": false,
      "notTested": false,
      "resistant": false,
      "susceptible": true,
      "type": "SUSCEPTIBLE",
    },
    "Isoniazid": Object {
      "inconclusive": false,
      "inducible": false,
      "notTested": false,
      "resistant": false,
      "susceptible": true,
      "type": "SUSCEPTIBLE",
    },
    "Kanamycin": Object {
      "inconclusive": false,
      "inducible": false,
      "notTested": false,
      "resistant": false,
      "susceptible": true,
      "type": "SUSCEPTIBLE",
    },
    "Moxifloxacin": Object {
      "inconclusive": false,
      "inducible": false,
      "notTested": false,
      "resistant": false,
      "susceptible": true,
      "type": "SUSCEPTIBLE",
    },
    "Ofloxacin": Object {
      "inconclusive": false,
      "inducible": false,
      "notTested": false,
      "resistant": false,
      "susceptible": true,
      "type": "SUSCEPTIBLE",
    },
    "Pyrazinamide": Object {
      "inconclusive": false,
      "inducible": false,
      "notTested": false,
      "resistant": false,
      "susceptible": true,
      "type": "SUSCEPTIBLE",
    },
    "Rifampicin": Object {
      "inconclusive": false,
      "inducible": false,
      "mutation": "rpoB (S450L)",
      "notTested": false,
      "resistant": true,
      "susceptible": false,
      "type": "RESISTANT",
    },
    "Streptomycin": Object {
      "inconclusive": false,
      "inducible": false,
      "notTested": false,
      "resistant": false,
      "susceptible": true,
      "type": "SUSCEPTIBLE",
    },
  },
  "susceptible": Array [
    "Ofloxacin",
    "Moxifloxacin",
    "Isoniazid",
    "Kanamycin",
    "Ethambutol",
    "Streptomycin",
    "Ciprofloxacin",
    "Pyrazinamide",
    "Amikacin",
    "Capreomycin",
  ],
}
`;

exports[`AnalyserJsonTransformer when valid should transform as expected 5`] = `
Object {
  "drugsResistance": Object {
    "mdr": true,
    "xdr": true,
  },
  "evidence": Object {
    "Amikacin": Array [
      Array [
        "Resistance mutation found: A1401X in gene rrs",
        "Depth 52 on the resistant allele",
        "Depth 0 on the susceptible allele",
      ],
    ],
    "Capreomycin": Array [
      Array [
        "Resistance mutation found: A1401X in gene rrs",
        "Depth 52 on the resistant allele",
        "Depth 0 on the susceptible allele",
      ],
    ],
    "Ciprofloxacin": Array [
      Array [
        "Resistance mutation found: A90V in gene gyrA",
        "Depth 13 on the resistant allele",
        "Depth 22 on the susceptible allele",
      ],
      Array [
        "Resistance mutation found: D94G in gene gyrA",
        "Depth 18 on the resistant allele",
        "Depth 11 on the susceptible allele",
      ],
    ],
    "Ethambutol": Array [
      Array [
        "Resistance mutation found: M306V in gene embB",
        "Depth 45 on the resistant allele",
        "Depth 0 on the susceptible allele",
      ],
    ],
    "Isoniazid": Array [
      Array [
        "Resistance mutation found: S315G in gene katG",
        "Depth 30 on the resistant allele",
        "Depth 0 on the susceptible allele",
      ],
    ],
    "Kanamycin": Array [
      Array [
        "Resistance mutation found: A1401X in gene rrs",
        "Depth 52 on the resistant allele",
        "Depth 0 on the susceptible allele",
      ],
    ],
    "Moxifloxacin": Array [
      Array [
        "Resistance mutation found: A90V in gene gyrA",
        "Depth 13 on the resistant allele",
        "Depth 22 on the susceptible allele",
      ],
      Array [
        "Resistance mutation found: D94G in gene gyrA",
        "Depth 18 on the resistant allele",
        "Depth 11 on the susceptible allele",
      ],
    ],
    "Ofloxacin": Array [
      Array [
        "Resistance mutation found: A90V in gene gyrA",
        "Depth 13 on the resistant allele",
        "Depth 22 on the susceptible allele",
      ],
      Array [
        "Resistance mutation found: D94G in gene gyrA",
        "Depth 18 on the resistant allele",
        "Depth 11 on the susceptible allele",
      ],
    ],
    "Pyrazinamide": Array [
      Array [
        "Resistance mutation found: H137R in gene pncA",
        "Depth 7 on the resistant allele",
        "Depth 22 on the susceptible allele",
      ],
    ],
    "Rifampicin": Array [
      Array [
        "Resistance mutation found: S450L in gene rpoB",
        "Depth 44 on the resistant allele",
        "Depth 0 on the susceptible allele",
      ],
    ],
    "Streptomycin": Array [
      Array [
        "Resistance mutation found: K43R in gene rpsL",
        "Depth 56 on the resistant allele",
        "Depth 0 on the susceptible allele",
      ],
    ],
  },
  "hasResistance": true,
  "hasSpecies": true,
  "inconclusive": Array [],
  "inducible": Array [],
  "lineage": Array [
    "lineage2.2.10",
  ],
  "lineageString": "lineage2.2.10",
  "negative": Array [],
  "notTested": Array [],
  "positive": Array [],
  "resistant": Array [
    "Ofloxacin",
    "Moxifloxacin",
    "Isoniazid",
    "Kanamycin",
    "Ethambutol",
    "Streptomycin",
    "Ciprofloxacin",
    "Pyrazinamide",
    "Rifampicin",
    "Amikacin",
    "Capreomycin",
  ],
  "species": Array [
    "Mycobacterium_tuberculosis",
  ],
  "speciesAndLineageString": "Mycobacterium tuberculosis (lineage2.2.10)",
  "speciesString": "Mycobacterium tuberculosis",
  "susceptibility": Object {
    "Amikacin": Object {
      "inconclusive": false,
      "inducible": false,
      "mutation": "rrs (A1401X)",
      "notTested": false,
      "resistant": true,
      "susceptible": false,
      "type": "RESISTANT",
    },
    "Capreomycin": Object {
      "inconclusive": false,
      "inducible": false,
      "mutation": "rrs (A1401X)",
      "notTested": false,
      "resistant": true,
      "susceptible": false,
      "type": "RESISTANT",
    },
    "Ciprofloxacin": Object {
      "inconclusive": false,
      "inducible": false,
      "mutation": "gyrA (D94G)",
      "notTested": false,
      "resistant": true,
      "susceptible": false,
      "type": "RESISTANT",
    },
    "Ethambutol": Object {
      "inconclusive": false,
      "inducible": false,
      "mutation": "embB (M306V)",
      "notTested": false,
      "resistant": true,
      "susceptible": false,
      "type": "RESISTANT",
    },
    "Isoniazid": Object {
      "inconclusive": false,
      "inducible": false,
      "mutation": "katG (S315G)",
      "notTested": false,
      "resistant": true,
      "susceptible": false,
      "type": "RESISTANT",
    },
    "Kanamycin": Object {
      "inconclusive": false,
      "inducible": false,
      "mutation": "rrs (A1401X)",
      "notTested": false,
      "resistant": true,
      "susceptible": false,
      "type": "RESISTANT",
    },
    "Moxifloxacin": Object {
      "inconclusive": false,
      "inducible": false,
      "mutation": "gyrA (D94G)",
      "notTested": false,
      "resistant": true,
      "susceptible": false,
      "type": "RESISTANT",
    },
    "Ofloxacin": Object {
      "inconclusive": false,
      "inducible": false,
      "mutation": "gyrA (D94G)",
      "notTested": false,
      "resistant": true,
      "susceptible": false,
      "type": "RESISTANT",
    },
    "Pyrazinamide": Object {
      "inconclusive": false,
      "inducible": false,
      "mutation": "pncA (H137R)",
      "notTested": false,
      "resistant": true,
      "susceptible": false,
      "type": "RESISTANT",
    },
    "Rifampicin": Object {
      "inconclusive": false,
      "inducible": false,
      "mutation": "rpoB (S450L)",
      "notTested": false,
      "resistant": true,
      "susceptible": false,
      "type": "RESISTANT",
    },
    "Streptomycin": Object {
      "inconclusive": false,
      "inducible": false,
      "mutation": "rpsL (K43R)",
      "notTested": false,
      "resistant": true,
      "susceptible": false,
      "type": "RESISTANT",
    },
  },
  "susceptible": Array [],
}
`;
